[package]
name = "p2p"
version = "0.1.0"
authors = ["gguoss <guanghuaguo.oss@gmail.com>"]

[dependencies]
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-network-libp2p = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-client-db = { git = "https://github.com/paritytech/substrate" }
substrate-state-db = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-codec = { git = "https://github.com/paritytech/substrate", default_features = false }
substrate-codec-derive = { git = "https://github.com/paritytech/substrate", default_features = false }
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
exchange-primitives = {path = "./primitives"}
exchange-runtime = {path = "./runtime"}
exchange-executor = {path = "./executor"}
hex-literal = "0.1"
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
futures = "0.1.17"
tokio = "0.1.7"
log = "0.3"
env_logger = "0.4.3"

[workspace]
members = [
    "primitives",
    "runtime",
    "executor",
]
